--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <img
-      src="http://localhost:3030/avatars\\1713050403211-478567623_test-avatar.jpg"
+      src="http://localhost:3030/avatar/250cb49a53cfd1c7a2059e7973a13c3f"
       alt=""
     />
   </body>
